@@ -1,5 +1,9 @@
 Version 2.3-0
 
+ o ci.style="bands" is now the default for variates on the horizontal axis and can also be used with multiline=TRUE
+ 
+ o argument "alpha" renamed "alpha.band"
+ 
  o Added ci.style='bands', alpha= and lwd= to plot.effpoly() for line plots to give filled confidence bands and control line width
 
  o Added Effect.mlm for multivariate linear models
